--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@
 # Debug files
 *.dSYM/
 *.su
+
+# Cmake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifset.txt
+CTestTestfile.cmake
+build
